--- a/frontend-react/src/css/components.css
+++ b/frontend-react/src/css/components.css
@@ -1,3 +1,21 @@
 .dealer-container {
     margin-top: 5vh;
 }
+
+a.white{
+    color: white;
+}
+
+.background-color{
+    background-color: white;
+}
+
+.margin-top {
+    margin-top: 5vh;
+}
+
+.scroll-list {
+    height: 100%;
+    width: 100%;
+    overflow: scroll;
+}
